--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "date-filter",
-  "version": "0.0.1",
+  "name": "@angulartoolsdr/date-filter",
+  "version": "19.0.0",
   "peerDependencies": {
-    "@angular/common": "^18.2.0",
-    "@angular/core": "^18.2.0"
+    "@angular/common": "^19.0.5",
+    "@angular/core": "^19.0.5",
+    "@angular/forms": "^19.0.5",
+    "@angular/material": "^19.0.4"
   },
   "dependencies": {
+    "@angular/animations": "^19.0.5",
+    "@angular/forms": "^19.0.5",
+    "@angular/platform-browser": "^19.0.5",
+    "@angulartoolsdr/control-material": "^19.0.0",
+    "moment": "^2.30.1",
+    "ngx-toastr": "^19.0.0",
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "resolutions": {
+    "@angular/forms": "18.2.13"
+  },
+  "devDependencies": {
+    "npm-force-resolutions": "^0.0.10"
+  },
+  "scripts": {
+    "postinstall": "npx npm-force-resolutions"
+  }
 }
