--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@angulartoolsdr/date-filter",
-  "version": "19.0.0",
+  "version": "19.1.0",
   "peerDependencies": {
-    "@angular/common": "^19.0.5",
-    "@angular/core": "^19.0.5",
-    "@angular/forms": "^19.0.5",
-    "@angular/material": "^19.0.4"
+    "@angular/common": "^19.1.3",
+    "@angular/core": "^19.1.3",
+    "@angular/forms": "^19.1.3",
+    "@angular/material": "^19.1.1"
   },
   "dependencies": {
-    "@angular/animations": "^19.0.5",
-    "@angular/forms": "^19.0.5",
-    "@angular/platform-browser": "^19.0.5",
-    "@angulartoolsdr/control-material": "^19.0.0",
+    "@angular/animations": "^19.1.3",
+    "@angular/forms": "^19.1.3",
+    "@angular/platform-browser": "^19.1.3",
+	"@angulartoolsdr/control-material": "file:../../dist/control-material",
     "moment": "^2.30.1",
     "ngx-toastr": "^19.0.0",
     "tslib": "^2.3.0"
