--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "@angulartoolsdr/date-filter",
-  "version": "19.1.1",
+  "version": "20.0.0",
   "peerDependencies": {
-    "@angular/common": "^19.1.3",
-    "@angular/core": "^19.1.3",
-    "@angular/forms": "^19.1.3",
-    "@angular/material": "^19.1.1",
+    "@angular/common": "20.0.3",
+    "@angular/core": "20.0.3",
+    "@angular/forms": "20.0.3",
+    "@angular/material": "^20.0.3",
     "@angulartoolsdr/translation": "file:../../dist/translation"
   },
   "dependencies": {
-    "@angular/animations": "^19.1.3",
-    "@angular/forms": "^19.1.3",
-    "@angular/platform-browser": "^19.1.3",
-	  "@angulartoolsdr/control-material": "file:../../dist/control-material",
+    "@angular/animations": "20.0.3",
+    "@angular/forms": "20.0.3",
+    "@angular/platform-browser": "20.0.3",
+    "@angulartoolsdr/control-material": "file:../../dist/control-material",
     "moment": "^2.30.1",
     "ngx-toastr": "^19.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.8.1"
   },
   "resolutions": {
-    "@angular/forms": "18.2.13"
+    "@angular/forms": "20.0.3"
   },
   "devDependencies": {
     "npm-force-resolutions": "^0.0.10"
