--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angulartoolsdr/date-filter",
-  "version": "20.0.3",
+  "version": "20.0.4",
   "peerDependencies": {
     "@angular/common": "20.0.3",
     "@angular/core": "20.0.3",
@@ -12,7 +12,7 @@
     "@angular/animations": "20.0.3",
     "@angular/forms": "20.0.3",
     "@angular/platform-browser": "20.0.3",
-    "@angulartoolsdr/control-material": "file:../../dist/control-material",
+    "@angulartoolsdr/control-material": "20.0.3",
     "moment": "^2.30.1",
     "ngx-toastr": "^19.0.0",
     "tslib": "^2.8.1"
