--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "@angulartoolsdr/date-filter",
-  "version": "20.0.4",
+  "version": "20.0.6",
   "peerDependencies": {
-    "@angular/common": "20.0.3",
-    "@angular/core": "20.0.3",
-    "@angular/forms": "20.0.3",
-    "@angular/material": "^20.0.3",
-    "@angulartoolsdr/translation": "file:../../dist/translation"
+    "@angular/common": "20.0.6",
+    "@angular/core": "20.0.6",
+    "@angular/forms": "20.0.6",
+    "@angular/material": "20.0.4",
+    "@angulartoolsdr/translation": "20.0.6"
   },
   "dependencies": {
-    "@angular/animations": "20.0.3",
-    "@angular/forms": "20.0.3",
-    "@angular/platform-browser": "20.0.3",
-    "@angulartoolsdr/control-material": "20.0.3",
+    "@angular/animations": "20.0.6",
+    "@angular/platform-browser": "20.0.6",
+    "@angulartoolsdr/control-material": "20.0.6",
     "moment": "^2.30.1",
     "ngx-toastr": "^19.0.0",
     "tslib": "^2.8.1"
