--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "@angulartoolsdr/date-filter",
-  "version": "20.2.0",
+  "version": "20.2.1",
   "peerDependencies": {
-    "@angular/common": "20.2.0",
-    "@angular/core": "20.2.0",
-    "@angular/forms": "20.2.0",
-    "@angular/material": "20.2.0",
-    "@angulartoolsdr/translation": "20.2.0"
+    "@angular/common": "20.2.1",
+    "@angular/core": "20.2.1",
+    "@angular/forms": "20.2.1",
+    "@angular/material": "20.2.0"
   },
   "dependencies": {
-    "@angular/animations": "20.2.0",
-    "@angular/platform-browser": "20.2.0",
-    "@angulartoolsdr/control-material": "20.2.0",
+    "@angular/animations": "20.2.1",
+    "@angular/platform-browser": "20.2.1",
     "moment": "^2.30.1",
     "ngx-toastr": "^19.0.0",
     "tslib": "^2.8.1"
