--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@angulartoolsdr/date-filter",
-  "version": "20.2.1",
+  "version": "20.2.2",
   "peerDependencies": {
-    "@angular/common": "20.2.1",
-    "@angular/core": "20.2.1",
-    "@angular/forms": "20.2.1",
-    "@angular/material": "20.2.0"
+    "@angular/common": "20.2.2",
+    "@angular/core": "20.2.2",
+    "@angular/forms": "20.2.2",
+    "@angular/material": "20.2.1",
+    "@angulartoolsdr/translation": "20.2.2"
   },
   "dependencies": {
-    "@angular/animations": "20.2.1",
-    "@angular/platform-browser": "20.2.1",
+    "@angular/animations": "20.2.2",
+    "@angular/platform-browser": "20.2.2",
+    "@angulartoolsdr/control-material": "20.2.2",
     "moment": "^2.30.1",
     "ngx-toastr": "^19.0.0",
     "tslib": "^2.8.1"
