--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@angulartoolsdr/date-filter",
-  "version": "21.0.1",
+  "version": "21.1.0",
   "peerDependencies": {
-    "@angular/common": "21.0.1",
-    "@angular/core": "21.0.1",
-    "@angular/forms": "21.0.1",
-    "@angular/material": "21.0.1",
-    "@angulartoolsdr/translation": "21.0.1"
+    "@angular/common": "21.1.0",
+    "@angular/core": "21.1.0",
+    "@angular/forms": "21.1.0",
+    "@angular/material": "21.1.0",
+    "@angulartoolsdr/translation": "21.1.0"
   },
   "dependencies": {
-    "@angular/animations": "21.0.1",
-    "@angular/platform-browser": "21.0.1",
-    "@angulartoolsdr/control-material": "21.0.1",
+    "@angular/animations": "21.1.0",
+    "@angular/platform-browser": "21.1.0",
+    "@angulartoolsdr/control-material": "21.1.0",
     "moment": "^2.30.1",
-    "ngx-toastr": "^19.1.0",
+    "ngx-toastr": "20.0.4",
     "tslib": "^2.8.1"
   }
 }
